api/cmd/kli/internal/manifests/workmachine-node-manager-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kloudlite-hostmanager
